# pcp_pipe

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  MOJO_SETUP.md  README.md  build_mojo.sh  build_mojo_processor.sh  config.json  devbox.json  main.py  mojo_accelerators.mojo  mojo_interface.py  mojo_podcast_processor.mojo  plan.md  podcast_processor.py  podcast_processor.sh  pyproject.toml  setup_scripts.sh
.claude/: settings.local.json
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: lib.rs
crates/fetcher/testdata/: sample.html
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/summarize/: Cargo.toml
crates/summarize/src/: lib.rs
crates/transcribe/: Cargo.toml
crates/transcribe/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
docs/architecture/: arc42.md
docs/diagrams/: context.d2
pcp_pipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
