[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/fetcher",
    "crates/decoder",
    "crates/transcribe",
    "crates/summarize",
    "crates/pipeline",
    "crates/utils",
    "bin/pcp-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
