[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/fetcher",
    "crates/decoder",
    "crates/transcribe",
    "crates/summarize",
    "crates/pipeline",
    "crates/utils",
    "bin/pcp-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.5.43", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["stream", "rustls-tls", "http2"] }
url = "2.5.4"
bytes = "1.10.1"
sha2 = "0.10.9"
hex = "0.4.3"
feed-rs = "2.3.1"
futures-util = "0.3.31"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "isomp4", "ogg", "flac", "wav", "pcm"] }
