[project]
name = "pcp-pipe"
version = "0.1.0"
description = "High-Performance Podcast Processing Pipeline with GPU acceleration and local ML models"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "openai-whisper>=20250625",
    "transformers[torch]>=4.30.0",
    "resemblyzer>=0.1.3",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "yt-dlp>=2025.7.21",
    "requests>=2.31.0",
    "numpy>=2.3.2,<2.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "ruff>=0.12.7",
]

[project.scripts]
pcp-pipe = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120
target-version = ["py38"]