[package]
name = "pcp-fetcher"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
feed-rs = { workspace = true }
futures-util = { workspace = true }
scraper = "0.23"
regex = "1"
mime_guess = "2"
serde = { workspace = true }
serde_json = { workspace = true }
mime = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tempfile = "3"
