[package]
name = "pcp-transcribe"
version = "0.1.0"
edition.workspace = true

[features]
default = []
# Build-time accelerators (forwarded to whisper-rs). Enable one:
# -F pcp-transcribe/gpu-metal (Apple Silicon)
# -F pcp-transcribe/gpu-openmp (CPU OpenMP parallelism)
gpu-metal = ["whisper-rs/metal"]
gpu-openmp = ["whisper-rs/openmp"]

[dependencies]
anyhow = { workspace = true }
pcp-decoder = { path = "../decoder" }
whisper-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
directories = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
