[package]
name = "pcp-transcribe"
version = "0.1.0"
edition.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
pcp-decoder = { path = "../decoder" }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
directories = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
kalosm = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
