[package]
name = "pcp-transcribe"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tokio = { workspace = true }

# macOS Speech Framework bindings (required for this application)
objc2-speech = "0.3"
objc2-foundation = "0.3"
objc2 = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
